// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`buildRabbitEnvelope should build envelope from parsed message with minimal metadata 1`] = `
{
  "attempt": 0,
  "broadcast": false,
  "correlationId": null,
  "expiry": null,
  "headers": {},
  "identifierValue": null,
  "maxRetries": 0,
  "payload": {
    "data": [
      116,
      101,
      115,
      116,
      45,
      112,
      97,
      121,
      108,
      111,
      97,
      100,
    ],
    "type": "Buffer",
  },
  "priority": 0,
  "replyTo": null,
  "retryDelay": 1000,
  "retryDelayMax": 30000,
  "retryJitter": false,
  "retryMultiplier": 2,
  "retryStrategy": "constant",
  "timestamp": 1700000000000,
  "topic": "orders.created",
}
`;

exports[`buildRabbitEnvelope should fall back to metadata for retry config 1`] = `
{
  "attempt": 0,
  "broadcast": false,
  "correlationId": null,
  "expiry": null,
  "headers": {},
  "identifierValue": null,
  "maxRetries": 3,
  "payload": {
    "data": [
      116,
      101,
      115,
      116,
      45,
      112,
      97,
      121,
      108,
      111,
      97,
      100,
    ],
    "type": "Buffer",
  },
  "priority": 0,
  "replyTo": null,
  "retryDelay": 500,
  "retryDelayMax": 10000,
  "retryJitter": true,
  "retryMultiplier": 3,
  "retryStrategy": "exponential",
  "timestamp": 1700000000000,
  "topic": "orders.created",
}
`;

exports[`buildRabbitEnvelope should preserve user headers from parsed message 1`] = `
{
  "x-custom": "val",
  "x-trace": "abc",
}
`;

exports[`buildRabbitEnvelope should use parsed envelope values over metadata defaults 1`] = `
{
  "attempt": 3,
  "broadcast": true,
  "correlationId": "corr-1",
  "expiry": 5000,
  "headers": {},
  "identifierValue": null,
  "maxRetries": 0,
  "payload": {
    "data": [
      116,
      101,
      115,
      116,
      45,
      112,
      97,
      121,
      108,
      111,
      97,
      100,
    ],
    "type": "Buffer",
  },
  "priority": 7,
  "replyTo": "reply-q",
  "retryDelay": 1000,
  "retryDelayMax": 30000,
  "retryJitter": false,
  "retryMultiplier": 2,
  "retryStrategy": "constant",
  "timestamp": 1700000001000,
  "topic": "custom.topic",
}
`;
